--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/luanvalladares/video-maker#readme",
   "dependencies": {
     "algorithmia": "^0.3.10",
+    "gm": "^1.23.1",
     "googleapis": "^66.0.0",
+    "image-downloader": "^4.0.2",
     "readline-sync": "^1.4.10",
     "sbd": "^1.0.18",
     "watson-developer-cloud": "^4.0.1"
